# SurfaceExplorer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  audiocontroller.cpp  audiocontroller.h  deploy_surface.py  deploy_surface_old.py  expressionparser.h  geometrybuilder.cpp  geometrybuilder.h  glsltranslator.cpp  glsltranslator.h  glwidget.cpp  glwidget.h  inputhandler.cpp  inputhandler.h  librarydragdrophandler.cpp  librarydragdrophandler.h  libraryfileoperations.cpp  libraryfileoperations.h  librarymanager.cpp  librarymanager.h  librarymenucontroller.cpp  librarymenucontroller.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  presetserializer.cpp  presetserializer.h  resources.qrc  surfaceengine.cpp  surfaceengine.h  synthesizer.cpp  synthesizer.h  texturemanager.cpp  texturemanager.h  uistylemanager.cpp  uistylemanager.h  (+2 more)
Release/: surface-explorer.sh
Release/lib/: libQt6WaylandClient.so.6
android/: ._res  AndroidManifest.xml
presets/.trash/: 1773651590556_backup_1.json  1773654325151_backup_Klein Fire Racing.json  1773654474084_backup_Klein Racing.json  1773655223244_backup_Klein Racing.json  1773655284292_backup_Klein Fire Racing.json  1773655467614_backup_Mobius Racing.json  1773657896468_backup_Klein Fire Racing.json  1773657929108_backup_Klein Racing.json  1773658027320_backup_Mobius Racing.json  1773659111597_backup_Mobius Racing.json  1773659499682_backup_Mobius Racing.json  1773659567369_backup_Mobius Racing.json  1773659614449_backup_Mobius Racing.json  1773659702409_backup_Mobius Racing.json  1773660001837_backup_Mobius Racing.json  1773660078783_backup_Mobius Racing.json  1773660202491_backup_Mobius Racing.json  1773660463778_backup_P2.json  1773668535962_backup_P2.json  1773668550988_backup_Klein Fire Racing.json  1773668561531_backup_Klein Racing.json  1773668569056_backup_Mobius Racing.json  1773668576811_backup_P2.json  1773668967618_backup_P2_1.json  1773669290775_backup_Hopf Deformation.json  1773669451837_backup_HYbrid hyperbolic.json  1773669667096_backup_Klein Bottle.json  1773670100692_backup_Hopf Deformation.json  1773670401260_backup_Veronese Surface.json  1773670669599_backup_HYbrid hyperbolic.json  1773671291431_backup_1.json  1773671337381_backup_Klein Racing.json  1773671383572_backup_1.json  1773671713759_backup_1.json  1773671870737_backup_HYbrid hyperbolic.json  1773672374186_backup_Klein Racing.json  1773672658873_backup_Klein Fire Racing.json  1773672673832_backup_P2.json  1773672691410_backup_P2_1.json  1773672837217_backup_Klein Racing.json  (+177 more)
presets/records/Paths/: Klein Fire Racing.json  Klein Racing.json  Mobius Racing.json  P2.json  P2_1.json  Warping Torus.json
presets/records/Rotations/: HYbrid hyperbolic.json  Hopf Deformation.json
presets/records/Static/: Klein Bottle.json  Klein Bottle_copy1.json  Oloid.json  S3_slice.json  S3_slice1.json  Veronese Surface.json
presets/records/t_motions/: Otto Tube.json
presets/records/t_motions/3D/: Dynamic Mobius Band.json  Nil Sphere.json
presets/records/t_motions/H2xR/: Flutter of Wings.json  Hyperbolic Elicoid.json  Rotating Pringles.json
presets/records/t_motions/H3/: Enneper.json  Helicoid.json  Mobius Band.json  Sphere.json  Torus.json
presets/records/t_motions/NIL/: Deforming Torus.json  Geodetic Elicoid.json
presets/sounds/procedural/: Alien Thorns.json  Alps.json  Cross-Galactic Ocean.json  Dust Storm.json  Everithing's A Caustic.json  Labyrinthus Sub Terra.json  Neptune Racing.json  Red Cells.json  The Sanctuary.json  Trailing the Twinkling Tunnel.json  Waterfalls.json  Waves.json  Xyptonjtroz 4ts3z2.json
presets/surfaces/H2xR/: H2xR Slice.json  Hyperbolic Saddle.json  NewSurfacetemp.json
presets/surfaces/H3/: Enneper.json  Helicoid.json  Hellipsoid.json  Mobius Band.json  Slice.json  Sphere.json  Torus.json
presets/surfaces/NIL/: Heisenberg Plane.json  Heisenberg Sphere.json  Koranyi Sphere.json  NIL Helicoid.json  Wave Cylinder.json
presets/surfaces/Non-orientable/: Boy Surface 3D.json  Boy Surface.json  KB.json  Klein Bottle 3D.json  Mobius Strip.json  Veronese Surface.json
presets/surfaces/R3/: Cone Distorsion.json  Cresent.json  Dini Surface.json  Drop.json  Ennepper.json  Fresnel Noise.json  Fresnel.json  Helicoid.json  Helix.json  Hurricane.json  Hyperbolic Helicoid.json  Hyperboloid.json  Kinky Torus.json  Kuen.json  Limpet Torus.json  NIL Sphere1.json  Nil Sphere2.json  Oloid(script).json  Oloid.json  Paraboloid.json  Pseudo Catenoid.json  Pseudo Sphere.json  Pseudo Torus.json  Richmond Polar.json  Riemann Surface.json  Semioloid.json  Shell.json  Shell_1.json  Snake.json  Sphere.json  Spheroid.json  Star.json  Symmetrized Double Enneper.json  Toroid.json  Torus Noise.json  Torus.json  Toupie.json  Traxial Hexatorus.json  Tube_4D.json  Undersea.json
presets/surfaces/S1xS1XR/: Slice.json  Toroidal Helix.json  Warped Torus.json
presets/surfaces/S1xS1xS1/: Coiled Coil.json  Klein Bottle.json  Torus Knot.json
presets/surfaces/S2xR/: Elicoid.json  Torus.json
presets/surfaces/S2xS1/: Core Slice.json  Klein Bottle 4D.json  Klein Bottle 4D_1.json  Loxodrome.json  Toric Wave.json
presets/surfaces/S3/: Clifford Torus.json  Dynamic Clifford Torus.json  Dynamical Clifford Torus.json  Ellipsoid.json  S3 uv_slice.json  Slice.json  Torus.json  Trefoil Torus.json  Twisted Sphere.json  Villarceau Circles.json  Wavy Cliffod Torus.json
presets/surfaces/SL(2,R)/: Anti-de Sitter Torus.json  Asintotic Vortex.json  Iwasawa Torus.json  Wormhole BTZ.json
presets/surfaces/SOL/: SOLSlice.json  Sphere.json  Torus.json
presets/surfaces/Tubes/: Otto.json  Otto_4D (Slider A).json
presets/textures/Procedurals/: Checkboard.json  Clouds.json  Clouds1.json  Gradient.json  Gradient1.json  Julia.json  Julia1.json  Mandelbrot.json  Mandelbrot1.json  Mandelbrot2.json  Marble.json  Noise.json  Plasma.json  Plasma1.json  Rainbow.json  Rings.json  Row.json  Rows.json  Rows1.json  Stripes.json  Venus Canopy Light.json  Winds of Venus.json  Wood.json  Xor.json  procedural.json
shaders/: common.glsl  surface.frag  surface.vert
(+39 files in other folders)
